--- a/project.json
+++ b/project.json
@@ -19,8 +19,9 @@
         "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
         "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
         "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
-        "MongoDB.Driver": "2.2.3",
-        "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final"
+        "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
+        "Microsoft.Azure.DocumentDB": "1.8.0",
+        "Arnis.Documents": "0.0.2"
     },
     "commands": {
         "web": "Microsoft.AspNet.Server.Kestrel"
